# AsdLaba1

laba1/: Application.cpp  Application.h  CMakeLists.txt
laba1/list/: CustomList.h  CustomListItem.h
laba1/painting/: Painting.cpp  Painting.h  PaintingJsonUtil.cpp  PaintingJsonUtil.h  PaintingListUtil.cpp  PaintingListUtil.h
laba1/util/: Utils.cpp  Utils.h
